MIC-8: Implement basic structure of register API
